fix gap in about section

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -7,7 +7,6 @@
 
 .about-content {
   display: flex;
-  gap: 24px;
   flex-direction: column;
 }
 
